--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,5 @@
+# https://github.com/bbatsov/rubocop/blob/master/config/default.yml
+
 Metrics/LineLength:
   Max: 120
 
@@ -17,6 +19,9 @@ Style/PercentLiteralDelimiters:
     '%w': []
     '%W': []
     '%x': ()
+
+Style/BlockDelimiters:
+  EnforcedStyle: semantic
 
 ### Disabled
 
