Enforce Unix line endings

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -29,6 +29,9 @@ Style/PercentLiteralDelimiters:
 Style/BlockDelimiters:
   EnforcedStyle: semantic
 
+Style/EndOfLine:
+  EnforcedStyle: lf
+
 ### Disabled
 
 Style/Documentation:
