Fix alternate path in .projections.json

--- a/.projections.json
+++ b/.projections.json
@@ -3,7 +3,7 @@
     "alternate": "spec/{}_spec.rb"
   },
   "spec/web_watcher/*_spec.rb": {
-    "alternate": "lib/web_watcher{}.rb"
+    "alternate": "lib/web_watcher/{}.rb"
   },
   "apps/*.rb": {
     "alternate": "spec/{}_spec.rb"
