Improve readability of tests
Using mocha and fabrication the tests now read a lot better.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -28,6 +28,8 @@ Style/PercentLiteralDelimiters:
 
 Style/BlockDelimiters:
   EnforcedStyle: semantic
+  Exclude:
+    - "spec/support/factories.rb"
 
 ### Disabled
 
