--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,46 +1,16 @@
-# https://github.com/bbatsov/rubocop/blob/master/config/default.yml
-
-Metrics/LineLength:
-  Max: 120
-
-Style/StringLiterals:
-  EnforcedStyle: double_quotes
-
-Style/TrailingCommaInArguments:
-  EnforcedStyleForMultiline: comma
-
-Style/TrailingCommaInLiteral:
-  EnforcedStyleForMultiline: comma
-
-# Prefer () for all strings/symbols, [] for all arrays and {} for regexes
-Style/PercentLiteralDelimiters:
-  PreferredDelimiters:
-    '%':  ()
-    '%i': []
-    '%I': []
-    '%q': ()
-    '%Q': ()
-    '%r': '{}'
-    '%s': ()
-    '%w': []
-    '%W': []
-    '%x': ()
-
-Style/BlockDelimiters:
-  EnforcedStyle: semantic
-  Exclude:
-    - "spec/support/factories.rb"
+inherit_from:
+  - https://raw.githubusercontent.com/alcesleo/rubocop-config/master/.rubocop.yml
 
 ### Disabled
-
-Style/Documentation:
-  Enabled: false
-
-Style/WordArray:
-  Enabled: false
 
 Style/ClassAndModuleChildren:
   Enabled: false
 
 Metrics/BlockLength:
-  Enabled: false
+  Exclude:
+    - "**/*_spec.rb"
+    - "apps/web/application.rb"
+
+Style/BlockDelimiters:
+  Exclude:
+    - "spec/support/factories.rb"
